# bct-workflow-aggregates-cpp

./: .gitattributes  .gitignore  .gitmodules  BCT.Common.Messages.CPP.nuspec  BCT.Common.Messages.CPP.sln  BCT.Common.Messages.CPP.targets  BCT.Workflow.Aggregates.CPP.sln  Bct.Workflow.Aggregates.CPP.nuspec  Bct.Workflow.Aggregates.CPP.runsettings  makefile  makefile.vx  serialize_test.cpp
BCT.Common.Messages.CPP/: BCT.Common.Messages.CPP.vcxproj  BCT.Common.Messages.CPP.vcxproj.filters  unit_test_log.txt
BCT.Common.Messages.CPP/include/: AbstractAggregate.h  AbstractField.h  AssessmentRule.h  BaseAggregate.h  BaseField.h  ComputeRule.h  Exceptions.h  FieldDouble.h  FieldDoubleRo.h  FieldInt32.h  FieldInt32Ro.h  FieldMeta.h  FieldStateEnum.h  FieldTypeEnum.h  VersionInfo.h  VersionMetaData.h
BCT.Common.Messages.CPP/src/: BaseAggregate.cpp  BaseField.cpp  Exceptions.cpp
BCT.Common.Messages.CPP/test/: BCT.Common.DevComm.Messages.Test.cpp  ComputeFieldUnitTests.cpp  GeneralUnitTests.cpp
Bct.Workflow.Aggregates.CPP.GeneratedCode/: Bct.Workflow.Aggregates.CPP.GeneratedCode.vcxproj  Bct.Workflow.Aggregates.CPP.GeneratedCode.vcxproj.filters
Bct.Workflow.Aggregates.CPP.GeneratedCode/include/: AggComputeField.h  NestedWithReference.h  PlateletConfigAggregate.h  PlateletConfigVectorAggregate.h  PlateletTemplateAggregate.h  ProjectEnumerations.h  ReferenceAggregate.h  ReferenceEnum.h  Sample1Aggregate.h  SimpleAggregate.h
Bct.Workflow.Aggregates.CPP.GeneratedCode/src/: AggComputeField.cpp  NestedWithReference.cpp  PlateletConfigAggregate.cpp  PlateletConfigVectorAggregate.cpp  PlateletTemplateAggregate.cpp  ReferenceAggregate.cpp  Sample1Aggregate.cpp  SimpleAggregate.cpp  makefile  makefile.vx
Bct.Workflow.Aggregates.CPP.Test/: Bct.Workflow.Aggregates.CPP.Test.vcxproj  Bct.Workflow.Aggregates.CPP.Test.vcxproj.filters  ComprehensiveUnitTests.cpp  TestHelperBaseField.h  VersionChangeRuleUnitTests.cpp  serialize_test.cpp
Bct.Workflow.Aggregates.CPP.Test/include/: AggAssess.h  AggNested.h  AssessMetaData.h  TestLogger.h
Bct.Workflow.Aggregates.CPP.Test/src/: AggAssess.cpp  AggNested.cpp  AssessMetaData.cpp  AssessUnitTests.cpp  EnumFieldUnitTests.cpp  makefile
Bct.Workflow.Aggregates.CPP.Test/test/: AggLoggingUnitTests.cpp  AggNestedUnitTests.cpp  CodeGenerationUnitTests.cpp  ComprehensiveUnitTests.cpp  ComputeFieldUnitTests.cpp  EnumFieldUnitTests.cpp  GeneralUnitTests.cpp  MetaUnitTests.cpp  Sample1.yaml  makefile  (+6 more)
Bct.Workflow.Aggregates.CPPLib/: Bct.Workflow.Aggregates.CPPLib.vcxproj  Bct.Workflow.Aggregates.CPPLib.vcxproj.filters  ClassDiagram.cd  makefile.vx  packages.config  readme.txt  readme_vxworks.txt
Bct.Workflow.Aggregates.GeneratedCode/: Bct.Workflow.Aggregates.GeneratedCode.vcxproj  Bct.Workflow.Aggregates.GeneratedCode.vcxproj.filters
Bct.Workflow.Aggregates.Messages.Lib/: Bct.Workflow.Aggregates.Messages.Lib.vcxproj  Bct.Workflow.Aggregates.Messages.Lib.vcxproj.filters
Configuration/: create-nugetpackage.ps1
ConsoleApplication1/: ConsoleApplication1.vcxproj
DoxyGen/: Doxyfile  TAGFILE.TXT
GeneratedCode/: GeneratedCode.vcxproj  GeneratedCode.vcxproj.filters
TestBCT.Common.Messages.CPP/: AggComputeField.cpp  TestBCT.Common.Messages.CPP.vcxproj  TestBCT.Common.Messages.CPP.vcxproj.filters
linuxmake/: README-linux-builds.md
rapidjson-1.1.0/: PROVENANCE  rapidjson.diffs
serialize_test/: makefile.vx  serialize_test.cpp  serialize_test.vcxproj
src/: .editorconfig  BCT.Workflow.Aggregates.CPP.sln  Bct.Workflow.Aggregates.CPP.nuspec  Bct.Workflow.Aggregates.CPP.runsettings  CMakeLists.txt  Makefile  dockerBuild.sh
src/Bct.Workflow.Aggregates.CPP.GeneratedCode/: Bct.Workflow.Aggregates.CPP.GeneratedCode.vcxproj  CMakeLists.txt
src/Bct.Workflow.Aggregates.CPP.GeneratedCode/include/: ReferenceAggregate.h
src/Bct.Workflow.Aggregates.CPP.GeneratedCode/src/: ProjectEnumerations.cpp  Sample1Aggregate.cpp
src/Bct.Workflow.Aggregates.CPP.Test/: Bct.Workflow.Aggregates.CPP.Test.vcxproj  Bct.Workflow.Aggregates.CPP.Test.vcxproj.filters  CMakeLists.txt  ExceptionUnitTests.cpp  ExceptionUnitTests.h
src/Bct.Workflow.Aggregates.CPP.Test/include/: AggNested.h  AssessMetaData.h
src/Bct.Workflow.Aggregates.CPP.Test/src/: AssessMetaData.cpp
src/Bct.Workflow.Aggregates.CPP.Test/test/: AggLoggingUnitTests.cpp  ComputeFieldUnitTests.cpp  ExceptionUnitTests.cpp  GeneralUnitTests.cpp  QAComprehensiveUnitTests.cpp  VectorFieldUnitTests.cpp
src/Bct.Workflow.Aggregates.CPPLib/: Bct.Workflow.Aggregates.CPPLib.vcxproj  Bct.Workflow.Aggregates.CPPLib.vcxproj.filters  CMakeLists.txt  packages.config
src/Bct.Workflow.Aggregates.CPPLib/BCT.Common.CppLogging/: CMakeLists.txt
src/Bct.Workflow.Aggregates.CPPLib/BCT.Common.CppLogging/include/: IBctLogger.h  NullLogger.h
src/Bct.Workflow.Aggregates.CPPLib/BCT.Common.CppLogging/test/: IBctLoggerUnitTests.cpp  TestLogger.cpp  TestLogger.h
src/Bct.Workflow.Aggregates.CPPLib/BCT.RPNEvaluator.CPP/: CMakeLists.txt
src/Bct.Workflow.Aggregates.CPPLib/BCT.RPNEvaluator.CPP/include/: FunctionMap.h  RPNVariable.h  TokenClass.h
src/Bct.Workflow.Aggregates.CPPLib/BCT.RPNEvaluator.CPP/src/: RPNEvaluator.cpp
src/Bct.Workflow.Aggregates.CPPLib/BCT.Workflow.Util.Cpp/include/: type_name.h
src/Bct.Workflow.Aggregates.CPPLib/include/: AggregateMetaData.h  AggregateNotFound.h  AssessmentResult.h  BaseAggregate.h  BaseField.h  BaseFieldRo.h  CannotConvertScalar.h  ComputeRule.h  EnumFieldRo.h  FieldInfo.h  FieldMeta.h  FluentAssessmentRule.h  FluentComputeRule.h  FluentVersionChangeRule.h  NoSuchVersion.h  NotAbleToGet.h  NotAbleToSet.h  RPNEvalException.h  StringField.h  StringFieldRo.h  VectorField.h  VersionChangeRule.h  demangle.h
src/Bct.Workflow.Aggregates.CPPLib/src/: AggregateMetaData.cpp  AggregateNotFound.cpp  AssessmentResult.cpp  BaseAggregate.cpp  CannotConvertScalar.cpp  FieldInfo.cpp  FluentAssessmentRule.cpp  FluentMeta.cpp  FluentVersionChangeRule.cpp  NoSuchVersion.cpp  NotAbleToGet.cpp  NotAbleToSet.cpp  RPNEvalException.cpp  StringField.cpp  VersionInfo.cpp
src/serialize_test/: serialize_test.vcxproj
(+124 files in other folders)
